syntax = "proto3";

package proto;
option java_package = "generatedClasses";


message FileUploadRequest {
  int32 staff_id=1;
  string file_path = 2;
}



message FileUploadResponse {
  string file_name = 1;
  string upload_status = 2;
}


service FileUploadService {
  rpc uploadFile (FileUploadRequest) returns (FileUploadResponse);
  rpc uploadImage (FileUploadRequest) returns (FileUploadResponse);
}